// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datepicker@desktop Should render empty component 1`] = `
<Component>
  <Component>
    <Component>
      <div
        className="Datepicker"
      >
        <t
          adjustDateOnChange={true}
          allowSameDay={false}
          customInput={
            <Unknown
              baseline={true}
              iconRight={
                <Unknown
                  type="calendar"
                />
              }
            />
          }
          customInputRef="innerRef"
          dateFormat="dd.MM.yyyy"
          dateFormatCalendar="LLLL yyyy"
          disabled={false}
          disabledKeyboardNavigation={false}
          dropdownMode="scroll"
          inlineFocusSelectedMonth={false}
          locale={
            Object {
              "code": "ru",
              "formatDistance": [Function],
              "formatLong": Object {
                "date": [Function],
                "dateTime": [Function],
                "time": [Function],
              },
              "formatRelative": [Function],
              "localize": Object {
                "day": [Function],
                "dayPeriod": [Function],
                "era": [Function],
                "month": [Function],
                "ordinalNumber": [Function],
                "quarter": [Function],
              },
              "match": Object {
                "day": [Function],
                "dayPeriod": [Function],
                "era": [Function],
                "month": [Function],
                "ordinalNumber": [Function],
                "quarter": [Function],
              },
              "options": Object {
                "firstWeekContainsDate": 1,
                "weekStartsOn": 1,
              },
            }
          }
          monthsShown={1}
          nextMonthButtonLabel="Следующий месяц"
          nextYearButtonLabel="Следующий год"
          onBlur={[Function]}
          onCalendarClose={[Function]}
          onCalendarOpen={[Function]}
          onChange={[Function]}
          onClickOutside={[Function]}
          onFocus={[Function]}
          onInputClick={[Function]}
          onInputError={[Function]}
          onKeyDown={[Function]}
          onMonthChange={[Function]}
          onSelect={[Function]}
          onYearChange={[Function]}
          peekNextMonth={true}
          popperContainer={[Function]}
          preventOpenOnFocus={false}
          previousMonthButtonLabel="Предыдущий месяц"
          previousYearButtonLabel="Предыдущий год"
          readOnly={false}
          renderDayContents={[Function]}
          selected={null}
          shouldCloseOnSelect={true}
          showMonthDropdown={true}
          showMonthYearPicker={false}
          showPopperArrow={false}
          showPreviousMonths={false}
          showQuarterYearPicker={false}
          showTimeInput={false}
          showTimeSelect={false}
          showYearDropdown={true}
          strictParsing={true}
          timeCaption="Time"
          timeInputLabel="Time"
          timeIntervals={30}
          withPortal={false}
        >
          <t
            hidePopper={true}
            popperComponent={null}
            popperContainer={[Function]}
            popperModifiers={
              Object {
                "preventOverflow": Object {
                  "boundariesElement": "viewport",
                  "enabled": true,
                  "escapeWithReference": true,
                },
              }
            }
            popperPlacement="bottom-start"
            popperProps={Object {}}
            targetComponent={
              <div
                className="react-datepicker__input-container"
              >
                <Unknown
                  baseline={true}
                  className=""
                  disabled={false}
                  iconRight={
                    <Unknown
                      type="calendar"
                    />
                  }
                  innerRef={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  readOnly={false}
                  value=""
                />
              </div>
            }
          >
            <Manager
              className="react-datepicker-manager"
            >
              <Reference>
                <InnerReference
                  setReferenceNode={[Function]}
                >
                  <div
                    className="react-datepicker-wrapper"
                  >
                    <div
                      className="react-datepicker__input-container"
                    >
                      <Component
                        baseline={true}
                        className=""
                        disabled={false}
                        iconRight={
                          <Unknown
                            type="calendar"
                          />
                        }
                        innerRef={[Function]}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        readOnly={false}
                        value=""
                      >
                        <Component
                          className="Textinput Textinput_baseline"
                          disabled={false}
                          iconRight={
                            <Unknown
                              type="calendar"
                            />
                          }
                          innerRef={[Function]}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          readOnly={false}
                          value=""
                        >
                          <DebounceInput
                            className="Textinput Textinput_baseline"
                            debounceTimeout={0}
                            disabled={false}
                            element={[Function]}
                            forceNotifyByEnter={true}
                            forceNotifyOnBlur={true}
                            iconRight={
                              <Unknown
                                type="calendar"
                              />
                            }
                            innerRef={[Function]}
                            minLength={0}
                            onBlur={[Function]}
                            onChange={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            readOnly={false}
                            type="text"
                            value=""
                          >
                            <Component
                              className="Textinput Textinput_baseline"
                              disabled={false}
                              iconRight={
                                <Unknown
                                  type="calendar"
                                />
                              }
                              innerRef={[Function]}
                              onBlur={[Function]}
                              onChange={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              readOnly={false}
                              type="text"
                              value=""
                            >
                              <Component
                                className="Textinput Textinput_baseline"
                                disabled={false}
                                iconRight={
                                  <Unknown
                                    type="calendar"
                                  />
                                }
                                innerRef={[Function]}
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                readOnly={false}
                                type="text"
                                value=""
                              >
                                <Component
                                  className="Textinput Textinput_baseline"
                                  disabled={false}
                                  iconRight={
                                    <Unknown
                                      type="calendar"
                                    />
                                  }
                                  innerRef={[Function]}
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  onKeyDown={[Function]}
                                  readOnly={false}
                                  type="text"
                                  value=""
                                >
                                  <Component
                                    className="Textinput Textinput_baseline"
                                    disabled={false}
                                    iconRight={
                                      <Unknown
                                        type="calendar"
                                      />
                                    }
                                    innerRef={[Function]}
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    onKeyDown={[Function]}
                                    readOnly={false}
                                    type="text"
                                    value=""
                                  >
                                    <Component
                                      className="Textinput Textinput_baseline"
                                      disabled={false}
                                      iconRight={
                                        <Unknown
                                          type="calendar"
                                        />
                                      }
                                      innerRef={[Function]}
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      onKeyDown={[Function]}
                                      readOnly={false}
                                      type="text"
                                      value=""
                                    >
                                      <Component
                                        className="Textinput Textinput_baseline"
                                        disabled={false}
                                        iconRight={
                                          <Unknown
                                            type="calendar"
                                          />
                                        }
                                        innerRef={[Function]}
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onClick={[Function]}
                                        onFocus={[Function]}
                                        onKeyDown={[Function]}
                                        readOnly={false}
                                        type="text"
                                        value=""
                                      >
                                        <Component
                                          className="Textinput Textinput_baseline"
                                          disabled={false}
                                          iconRight={
                                            <Unknown
                                              type="calendar"
                                            />
                                          }
                                          innerRef={[Function]}
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onClick={[Function]}
                                          onFocus={[Function]}
                                          onKeyDown={[Function]}
                                          readOnly={false}
                                          type="text"
                                          value=""
                                        >
                                          <Component
                                            className="Textinput Textinput_baseline"
                                            disabled={false}
                                            iconRight={
                                              <Unknown
                                                type="calendar"
                                              />
                                            }
                                            innerRef={[Function]}
                                            onBlur={[Function]}
                                            onChange={[Function]}
                                            onClick={[Function]}
                                            onFocus={[Function]}
                                            onKeyDown={[Function]}
                                            readOnly={false}
                                            type="text"
                                            value=""
                                          >
                                            <Component
                                              className="Textinput Textinput_baseline"
                                              disabled={false}
                                              iconRight={
                                                <Unknown
                                                  type="calendar"
                                                />
                                              }
                                              innerRef={[Function]}
                                              onBlur={[Function]}
                                              onChange={[Function]}
                                              onClick={[Function]}
                                              onFocus={[Function]}
                                              onKeyDown={[Function]}
                                              readOnly={false}
                                              type="text"
                                              value=""
                                            >
                                              <WithControl@desktop(withAutoFocus(TextinputPresenter))
                                                className="Textinput Textinput_baseline"
                                                disabled={false}
                                                iconRight={
                                                  <Unknown
                                                    type="calendar"
                                                  />
                                                }
                                                innerRef={[Function]}
                                                onBlur={[Function]}
                                                onChange={[Function]}
                                                onClick={[Function]}
                                                onFocus={[Function]}
                                                onKeyDown={[Function]}
                                                readOnly={false}
                                                type="text"
                                                value=""
                                              >
                                                <withAutoFocus(TextinputPresenter)
                                                  className="Textinput Textinput_baseline"
                                                  disabled={false}
                                                  iconRight={
                                                    <Unknown
                                                      type="calendar"
                                                    />
                                                  }
                                                  innerRef={[Function]}
                                                  onBlur={[Function]}
                                                  onChange={[Function]}
                                                  onClick={[Function]}
                                                  onFocus={[Function]}
                                                  onKeyDown={[Function]}
                                                  onMouseEnter={[Function]}
                                                  onMouseLeave={[Function]}
                                                  readOnly={false}
                                                  type="text"
                                                  value=""
                                                >
                                                  <TextinputPresenter
                                                    className="Textinput Textinput_baseline"
                                                    controlRef={[Function]}
                                                    disabled={false}
                                                    iconRight={
                                                      <Unknown
                                                        type="calendar"
                                                      />
                                                    }
                                                    innerRef={[Function]}
                                                    onBlur={[Function]}
                                                    onChange={[Function]}
                                                    onClick={[Function]}
                                                    onFocus={[Function]}
                                                    onKeyDown={[Function]}
                                                    onMouseEnter={[Function]}
                                                    onMouseLeave={[Function]}
                                                    readOnly={false}
                                                    type="text"
                                                    value=""
                                                  >
                                                    <WithControl(Textinput)
                                                      className="Textinput Textinput_baseline"
                                                      controlRef={[Function]}
                                                      disabled={false}
                                                      iconRight={
                                                        <Unknown
                                                          type="calendar"
                                                        />
                                                      }
                                                      innerRef={[Function]}
                                                      onBlur={[Function]}
                                                      onChange={[Function]}
                                                      onClick={[Function]}
                                                      onFocus={[Function]}
                                                      onKeyDown={[Function]}
                                                      onMouseEnter={[Function]}
                                                      onMouseLeave={[Function]}
                                                      readOnly={false}
                                                      type="text"
                                                      value=""
                                                    >
                                                      <Textinput
                                                        className="Textinput Textinput_baseline"
                                                        controlRef={[Function]}
                                                        disabled={false}
                                                        iconRight={
                                                          <Unknown
                                                            type="calendar"
                                                          />
                                                        }
                                                        innerRef={[Function]}
                                                        onBlur={[Function]}
                                                        onChange={[Function]}
                                                        onClick={[Function]}
                                                        onFocus={[Function]}
                                                        onKeyDown={[Function]}
                                                        onMouseDown={[Function]}
                                                        onMouseEnter={[Function]}
                                                        onMouseLeave={[Function]}
                                                        onMouseUp={[Function]}
                                                        readOnly={false}
                                                        type="text"
                                                        value=""
                                                      >
                                                        <span
                                                          className="Textinput Textinput_iconRight Textinput_baseline"
                                                          onMouseEnter={[Function]}
                                                          onMouseLeave={[Function]}
                                                        >
                                                          <TextinputIcon
                                                            component={
                                                              <Unknown
                                                                type="calendar"
                                                              />
                                                            }
                                                            side="right"
                                                          >
                                                            <Component
                                                              className="Textinput-Icon Textinput-Icon_side_right"
                                                              type="calendar"
                                                            >
                                                              <Component
                                                                className="Icon Icon_type_calendar Textinput-Icon Textinput-Icon_side_right"
                                                                type="calendar"
                                                              >
                                                                <Icon
                                                                  className="Icon Icon_type_calendar Icon_type_calendar Textinput-Icon Textinput-Icon_side_right"
                                                                  type="calendar"
                                                                >
                                                                  <span
                                                                    aria-hidden={true}
                                                                    className="Icon Icon_type_calendar Icon_type_calendar Textinput-Icon Textinput-Icon_side_right"
                                                                    style={Object {}}
                                                                  />
                                                                </Icon>
                                                              </Component>
                                                            </Component>
                                                          </TextinputIcon>
                                                          <RenderOverride
                                                            aria-invalid={false}
                                                            controlRef={[Function]}
                                                            disabled={false}
                                                            onBlur={[Function]}
                                                            onChange={[Function]}
                                                            onClick={[Function]}
                                                            onFocus={[Function]}
                                                            onKeyDown={[Function]}
                                                            onMouseDown={[Function]}
                                                            onMouseUp={[Function]}
                                                            readOnly={false}
                                                            type="text"
                                                            value=""
                                                          >
                                                            <TextinputControl
                                                              aria-invalid={false}
                                                              controlRef={[Function]}
                                                              disabled={false}
                                                              onBlur={[Function]}
                                                              onChange={[Function]}
                                                              onClick={[Function]}
                                                              onFocus={[Function]}
                                                              onKeyDown={[Function]}
                                                              onMouseDown={[Function]}
                                                              onMouseUp={[Function]}
                                                              readOnly={false}
                                                              type="text"
                                                              value=""
                                                            >
                                                              <input
                                                                aria-invalid={false}
                                                                autoComplete="off"
                                                                className="Textinput-Control"
                                                                disabled={false}
                                                                onBlur={[Function]}
                                                                onChange={[Function]}
                                                                onClick={[Function]}
                                                                onFocus={[Function]}
                                                                onKeyDown={[Function]}
                                                                onMouseDown={[Function]}
                                                                onMouseUp={[Function]}
                                                                readOnly={false}
                                                                type="text"
                                                                value=""
                                                              />
                                                            </TextinputControl>
                                                          </RenderOverride>
                                                          <TextinputBox>
                                                            <span
                                                              className="Textinput-Box"
                                                            />
                                                          </TextinputBox>
                                                        </span>
                                                      </Textinput>
                                                    </WithControl(Textinput)>
                                                  </TextinputPresenter>
                                                </withAutoFocus(TextinputPresenter)>
                                              </WithControl@desktop(withAutoFocus(TextinputPresenter))>
                                            </Component>
                                          </Component>
                                        </Component>
                                      </Component>
                                    </Component>
                                  </Component>
                                </Component>
                              </Component>
                            </Component>
                          </DebounceInput>
                        </Component>
                      </Component>
                    </div>
                  </div>
                </InnerReference>
              </Reference>
              <PopperPortal>
                <Portal
                  containerInfo={<body />}
                />
              </PopperPortal>
            </Manager>
          </t>
        </t>
      </div>
    </Component>
  </Component>
</Component>
`;

exports[`Datepicker@desktop Should support Textinput / Input props 1`] = `
<Component
  disabled={true}
  max={2015-02-18T00:00:00.000Z}
  min={2015-02-15T00:00:00.000Z}
  name="datefield"
  pin="brick-brick"
  readOnly={true}
  size="m"
  value={2015-02-17T00:00:00.000Z}
  view="default"
>
  <Component
    disabled={true}
    max={2015-02-18T00:00:00.000Z}
    min={2015-02-15T00:00:00.000Z}
    name="datefield"
    pin="brick-brick"
    readOnly={true}
    size="m"
    value={2015-02-17T00:00:00.000Z}
    view="default"
  >
    <Component
      disabled={true}
      max={2015-02-18T00:00:00.000Z}
      min={2015-02-15T00:00:00.000Z}
      name="datefield"
      pin="brick-brick"
      readOnly={true}
      size="m"
      value={2015-02-17T00:00:00.000Z}
      view="default"
    >
      <div
        className="Datepicker Datepicker_view_default"
      >
        <t
          adjustDateOnChange={true}
          allowSameDay={false}
          customInput={
            <Unknown
              baseline={true}
              iconRight={
                <Unknown
                  size="m"
                  type="calendar"
                />
              }
              pin="brick-brick"
              size="m"
              view="default"
            />
          }
          customInputRef="innerRef"
          dateFormat="dd.MM.yyyy"
          dateFormatCalendar="LLLL yyyy"
          disabled={true}
          disabledKeyboardNavigation={false}
          dropdownMode="scroll"
          inlineFocusSelectedMonth={false}
          locale={
            Object {
              "code": "ru",
              "formatDistance": [Function],
              "formatLong": Object {
                "date": [Function],
                "dateTime": [Function],
                "time": [Function],
              },
              "formatRelative": [Function],
              "localize": Object {
                "day": [Function],
                "dayPeriod": [Function],
                "era": [Function],
                "month": [Function],
                "ordinalNumber": [Function],
                "quarter": [Function],
              },
              "match": Object {
                "day": [Function],
                "dayPeriod": [Function],
                "era": [Function],
                "month": [Function],
                "ordinalNumber": [Function],
                "quarter": [Function],
              },
              "options": Object {
                "firstWeekContainsDate": 1,
                "weekStartsOn": 1,
              },
            }
          }
          maxDate={2015-02-18T00:00:00.000Z}
          minDate={2015-02-15T00:00:00.000Z}
          monthsShown={1}
          name="datefield"
          nextMonthButtonLabel="Следующий месяц"
          nextYearButtonLabel="Следующий год"
          onBlur={[Function]}
          onCalendarClose={[Function]}
          onCalendarOpen={[Function]}
          onChange={[Function]}
          onClickOutside={[Function]}
          onFocus={[Function]}
          onInputClick={[Function]}
          onInputError={[Function]}
          onKeyDown={[Function]}
          onMonthChange={[Function]}
          onSelect={[Function]}
          onYearChange={[Function]}
          peekNextMonth={true}
          popperContainer={[Function]}
          preventOpenOnFocus={false}
          previousMonthButtonLabel="Предыдущий месяц"
          previousYearButtonLabel="Предыдущий год"
          readOnly={true}
          renderDayContents={[Function]}
          selected={2015-02-17T00:00:00.000Z}
          shouldCloseOnSelect={true}
          showMonthDropdown={true}
          showMonthYearPicker={false}
          showPopperArrow={false}
          showPreviousMonths={false}
          showQuarterYearPicker={false}
          showTimeInput={false}
          showTimeSelect={false}
          showYearDropdown={true}
          strictParsing={true}
          timeCaption="Time"
          timeInputLabel="Time"
          timeIntervals={30}
          withPortal={false}
        >
          <t
            hidePopper={true}
            popperComponent={null}
            popperContainer={[Function]}
            popperModifiers={
              Object {
                "preventOverflow": Object {
                  "boundariesElement": "viewport",
                  "enabled": true,
                  "escapeWithReference": true,
                },
              }
            }
            popperPlacement="bottom-start"
            popperProps={Object {}}
            targetComponent={
              <div
                className="react-datepicker__input-container"
              >
                <Unknown
                  baseline={true}
                  className=""
                  disabled={true}
                  iconRight={
                    <Unknown
                      size="m"
                      type="calendar"
                    />
                  }
                  innerRef={[Function]}
                  name="datefield"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  pin="brick-brick"
                  readOnly={true}
                  size="m"
                  value="17.02.2015"
                  view="default"
                />
              </div>
            }
          >
            <Manager
              className="react-datepicker-manager"
            >
              <Reference>
                <InnerReference
                  setReferenceNode={[Function]}
                >
                  <div
                    className="react-datepicker-wrapper"
                  >
                    <div
                      className="react-datepicker__input-container"
                    >
                      <Component
                        baseline={true}
                        className=""
                        disabled={true}
                        iconRight={
                          <Unknown
                            size="m"
                            type="calendar"
                          />
                        }
                        innerRef={[Function]}
                        name="datefield"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        pin="brick-brick"
                        readOnly={true}
                        size="m"
                        value="17.02.2015"
                        view="default"
                      >
                        <Component
                          className="Textinput Textinput_baseline"
                          disabled={true}
                          iconRight={
                            <Unknown
                              size="m"
                              type="calendar"
                            />
                          }
                          innerRef={[Function]}
                          name="datefield"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          pin="brick-brick"
                          readOnly={true}
                          size="m"
                          value="17.02.2015"
                          view="default"
                        >
                          <DebounceInput
                            className="Textinput Textinput_baseline"
                            debounceTimeout={0}
                            disabled={true}
                            element={[Function]}
                            forceNotifyByEnter={true}
                            forceNotifyOnBlur={true}
                            iconRight={
                              <Unknown
                                size="m"
                                type="calendar"
                              />
                            }
                            innerRef={[Function]}
                            minLength={0}
                            name="datefield"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            pin="brick-brick"
                            readOnly={true}
                            size="m"
                            type="text"
                            value="17.02.2015"
                            view="default"
                          >
                            <Component
                              className="Textinput Textinput_baseline"
                              disabled={true}
                              iconRight={
                                <Unknown
                                  size="m"
                                  type="calendar"
                                />
                              }
                              innerRef={[Function]}
                              name="datefield"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              pin="brick-brick"
                              readOnly={true}
                              size="m"
                              type="text"
                              value="17.02.2015"
                              view="default"
                            >
                              <Component
                                className="Textinput Textinput_size_m Textinput_baseline"
                                disabled={true}
                                iconRight={
                                  <Unknown
                                    size="m"
                                    type="calendar"
                                  />
                                }
                                innerRef={[Function]}
                                name="datefield"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                pin="brick-brick"
                                readOnly={true}
                                size="m"
                                type="text"
                                value="17.02.2015"
                                view="default"
                              >
                                <Component
                                  className="Textinput Textinput_size_m Textinput_baseline"
                                  disabled={true}
                                  iconRight={
                                    <Unknown
                                      size="m"
                                      type="calendar"
                                    />
                                  }
                                  innerRef={[Function]}
                                  name="datefield"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  onKeyDown={[Function]}
                                  pin="brick-brick"
                                  readOnly={true}
                                  size="m"
                                  type="text"
                                  value="17.02.2015"
                                  view="default"
                                >
                                  <Component
                                    className="Textinput Textinput_size_m Textinput_baseline"
                                    disabled={true}
                                    iconRight={
                                      <Unknown
                                        size="m"
                                        type="calendar"
                                      />
                                    }
                                    innerRef={[Function]}
                                    name="datefield"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    onKeyDown={[Function]}
                                    pin="brick-brick"
                                    readOnly={true}
                                    size="m"
                                    type="text"
                                    value="17.02.2015"
                                    view="default"
                                  >
                                    <Component
                                      className="Textinput Textinput_pin_brick-brick Textinput_size_m Textinput_baseline"
                                      disabled={true}
                                      iconRight={
                                        <Unknown
                                          size="m"
                                          type="calendar"
                                        />
                                      }
                                      innerRef={[Function]}
                                      name="datefield"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      onKeyDown={[Function]}
                                      pin="brick-brick"
                                      readOnly={true}
                                      size="m"
                                      type="text"
                                      value="17.02.2015"
                                      view="default"
                                    >
                                      <Component
                                        className="Textinput Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline"
                                        disabled={true}
                                        iconRight={
                                          <Unknown
                                            size="m"
                                            type="calendar"
                                          />
                                        }
                                        innerRef={[Function]}
                                        name="datefield"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onClick={[Function]}
                                        onFocus={[Function]}
                                        onKeyDown={[Function]}
                                        pin="brick-brick"
                                        readOnly={true}
                                        size="m"
                                        type="text"
                                        value="17.02.2015"
                                        view="default"
                                      >
                                        <Component
                                          className="Textinput Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline"
                                          disabled={true}
                                          iconRight={
                                            <Unknown
                                              size="m"
                                              type="calendar"
                                            />
                                          }
                                          innerRef={[Function]}
                                          name="datefield"
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onClick={[Function]}
                                          onFocus={[Function]}
                                          onKeyDown={[Function]}
                                          pin="brick-brick"
                                          readOnly={true}
                                          size="m"
                                          type="text"
                                          value="17.02.2015"
                                          view="default"
                                        >
                                          <Component
                                            className="Textinput Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline"
                                            disabled={true}
                                            iconRight={
                                              <Unknown
                                                size="m"
                                                type="calendar"
                                              />
                                            }
                                            innerRef={[Function]}
                                            name="datefield"
                                            onBlur={[Function]}
                                            onChange={[Function]}
                                            onClick={[Function]}
                                            onFocus={[Function]}
                                            onKeyDown={[Function]}
                                            pin="brick-brick"
                                            readOnly={true}
                                            size="m"
                                            type="text"
                                            value="17.02.2015"
                                            view="default"
                                          >
                                            <Component
                                              className="Textinput Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline"
                                              disabled={true}
                                              iconRight={
                                                <Unknown
                                                  size="m"
                                                  type="calendar"
                                                />
                                              }
                                              innerRef={[Function]}
                                              name="datefield"
                                              onBlur={[Function]}
                                              onChange={[Function]}
                                              onClick={[Function]}
                                              onFocus={[Function]}
                                              onKeyDown={[Function]}
                                              pin="brick-brick"
                                              readOnly={true}
                                              size="m"
                                              type="text"
                                              value="17.02.2015"
                                              view="default"
                                            >
                                              <WithControl@desktop(withAutoFocus(TextinputPresenter))
                                                className="Textinput Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline"
                                                disabled={true}
                                                iconRight={
                                                  <Unknown
                                                    size="m"
                                                    type="calendar"
                                                  />
                                                }
                                                innerRef={[Function]}
                                                name="datefield"
                                                onBlur={[Function]}
                                                onChange={[Function]}
                                                onClick={[Function]}
                                                onFocus={[Function]}
                                                onKeyDown={[Function]}
                                                pin="brick-brick"
                                                readOnly={true}
                                                size="m"
                                                type="text"
                                                value="17.02.2015"
                                                view="default"
                                              >
                                                <withAutoFocus(TextinputPresenter)
                                                  className="Textinput Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline"
                                                  disabled={true}
                                                  iconRight={
                                                    <Unknown
                                                      size="m"
                                                      type="calendar"
                                                    />
                                                  }
                                                  innerRef={[Function]}
                                                  name="datefield"
                                                  onBlur={[Function]}
                                                  onChange={[Function]}
                                                  onClick={[Function]}
                                                  onFocus={[Function]}
                                                  onKeyDown={[Function]}
                                                  pin="brick-brick"
                                                  readOnly={true}
                                                  size="m"
                                                  type="text"
                                                  value="17.02.2015"
                                                  view="default"
                                                >
                                                  <TextinputPresenter
                                                    className="Textinput Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline"
                                                    controlRef={[Function]}
                                                    disabled={true}
                                                    iconRight={
                                                      <Unknown
                                                        size="m"
                                                        type="calendar"
                                                      />
                                                    }
                                                    innerRef={[Function]}
                                                    name="datefield"
                                                    onBlur={[Function]}
                                                    onChange={[Function]}
                                                    onClick={[Function]}
                                                    onFocus={[Function]}
                                                    onKeyDown={[Function]}
                                                    pin="brick-brick"
                                                    readOnly={true}
                                                    size="m"
                                                    type="text"
                                                    value="17.02.2015"
                                                    view="default"
                                                  >
                                                    <WithControl(Textinput)
                                                      className="Textinput Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline"
                                                      controlRef={[Function]}
                                                      disabled={true}
                                                      iconRight={
                                                        <Unknown
                                                          size="m"
                                                          type="calendar"
                                                        />
                                                      }
                                                      innerRef={[Function]}
                                                      name="datefield"
                                                      onBlur={[Function]}
                                                      onChange={[Function]}
                                                      onClick={[Function]}
                                                      onFocus={[Function]}
                                                      onKeyDown={[Function]}
                                                      pin="brick-brick"
                                                      readOnly={true}
                                                      size="m"
                                                      type="text"
                                                      value="17.02.2015"
                                                      view="default"
                                                    >
                                                      <Textinput
                                                        className="Textinput Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline"
                                                        controlRef={[Function]}
                                                        disabled={true}
                                                        iconRight={
                                                          <Unknown
                                                            size="m"
                                                            type="calendar"
                                                          />
                                                        }
                                                        innerRef={[Function]}
                                                        name="datefield"
                                                        onChange={[Function]}
                                                        onClick={[Function]}
                                                        onKeyDown={[Function]}
                                                        pin="brick-brick"
                                                        readOnly={true}
                                                        size="m"
                                                        type="text"
                                                        value="17.02.2015"
                                                        view="default"
                                                      >
                                                        <span
                                                          className="Textinput Textinput_disabled Textinput_iconRight Textinput_view_default Textinput_pin_brick-brick Textinput_size_m Textinput_baseline"
                                                        >
                                                          <TextinputIcon
                                                            component={
                                                              <Unknown
                                                                size="m"
                                                                type="calendar"
                                                              />
                                                            }
                                                            side="right"
                                                          >
                                                            <Component
                                                              className="Textinput-Icon Textinput-Icon_side_right"
                                                              size="m"
                                                              type="calendar"
                                                            >
                                                              <Component
                                                                className="Icon Icon_type_calendar Textinput-Icon Textinput-Icon_side_right"
                                                                size="m"
                                                                type="calendar"
                                                              >
                                                                <Icon
                                                                  className="Icon Icon_type_calendar Icon_type_calendar Textinput-Icon Textinput-Icon_side_right"
                                                                  size="m"
                                                                  type="calendar"
                                                                >
                                                                  <span
                                                                    aria-hidden={true}
                                                                    className="Icon Icon_size_m Icon_type_calendar Icon_type_calendar Textinput-Icon Textinput-Icon_side_right"
                                                                    style={Object {}}
                                                                  />
                                                                </Icon>
                                                              </Component>
                                                            </Component>
                                                          </TextinputIcon>
                                                          <RenderOverride
                                                            aria-invalid={false}
                                                            controlRef={[Function]}
                                                            disabled={true}
                                                            name="datefield"
                                                            onChange={[Function]}
                                                            onClick={[Function]}
                                                            onKeyDown={[Function]}
                                                            readOnly={true}
                                                            type="text"
                                                            value="17.02.2015"
                                                          >
                                                            <TextinputControl
                                                              aria-invalid={false}
                                                              controlRef={[Function]}
                                                              disabled={true}
                                                              name="datefield"
                                                              onChange={[Function]}
                                                              onClick={[Function]}
                                                              onKeyDown={[Function]}
                                                              readOnly={true}
                                                              type="text"
                                                              value="17.02.2015"
                                                            >
                                                              <input
                                                                aria-invalid={false}
                                                                autoComplete="off"
                                                                className="Textinput-Control"
                                                                disabled={true}
                                                                name="datefield"
                                                                onChange={[Function]}
                                                                onClick={[Function]}
                                                                onKeyDown={[Function]}
                                                                readOnly={true}
                                                                type="text"
                                                                value="17.02.2015"
                                                              />
                                                            </TextinputControl>
                                                          </RenderOverride>
                                                          <TextinputBox>
                                                            <span
                                                              className="Textinput-Box"
                                                            />
                                                          </TextinputBox>
                                                        </span>
                                                      </Textinput>
                                                    </WithControl(Textinput)>
                                                  </TextinputPresenter>
                                                </withAutoFocus(TextinputPresenter)>
                                              </WithControl@desktop(withAutoFocus(TextinputPresenter))>
                                            </Component>
                                          </Component>
                                        </Component>
                                      </Component>
                                    </Component>
                                  </Component>
                                </Component>
                              </Component>
                            </Component>
                          </DebounceInput>
                        </Component>
                      </Component>
                    </div>
                  </div>
                </InnerReference>
              </Reference>
              <PopperPortal>
                <Portal
                  containerInfo={<body />}
                />
              </PopperPortal>
            </Manager>
          </t>
        </t>
      </div>
    </Component>
  </Component>
</Component>
`;
